WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
87817
[BlackBerry] The Page's deviceScaleFactor() is not being properly maintained
https://bugs.webkit.org/show_bug.cgi?id=87817
Summary
[BlackBerry] The Page's deviceScaleFactor() is not being properly maintained
Max Feil
Reported
2012-05-29 21:18:17 PDT
When navigating between web pages with different CSS pixel sizes, the deviceScaleFactor is not maintained properly. Specifically, when navigating from a page with a deviceScaleFactor greater than one to a page with the default deviceScaleFactor of 1.0. My patch fixes two spots in the code. One where viewport changes from non-default to default are being erroneously thrown out, and another where viewport changes back to default are recognized but deviceScaleFactor is not being updated.
Attachments
Patch
(2.51 KB, patch)
2012-05-29 21:34 PDT
,
Max Feil
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Max Feil
Comment 1
2012-05-29 21:34:05 PDT
Created
attachment 144695
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-29 23:18:04 PDT
Comment on
attachment 144695
[details]
Patch Clearing flags on attachment: 144695 Committed
r118895
: <
http://trac.webkit.org/changeset/118895
>
WebKit Review Bot
Comment 3
2012-05-29 23:18:19 PDT
All reviewed patches have been landed. Closing bug.
Max Feil
Comment 4
2012-11-02 12:43:12 PDT
Closing bug for patch that landed a long time ago.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug